--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown</title>
+    <title>Work days</title>
 	
 	<style> 
 	p 
@@ -19,39 +19,24 @@
 
 <body>
     <!-- Display the countdown timer in an element -->
-    <p id="days"></p>   
-    <p id="hours"></p>    
-    <p id="minutes"></p>
-    <p id="seconds"></p>
+    <p id="workdays"></p>   
 
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Dec 01 2023 05:30 PM").getTime();
+var now = new Date();
+
+const remaining_work_days = [Date(2023-11-30)]; 
 
 // Update the count down every 1 second
 var x = setInterval(function() {
 
   // Get todays date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now an the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var years = Math.floor(distance / (1000 * 60 * 60 * 24 * 365));
-  var days = Math.floor(distance % (1000 * 60 * 60 * 24 * 365) / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  var remaining = 0;
+  remaining_work_days.forEach(item => {if (now < item) {remaining++;} })
 
   // Display the result in the element with id="demo"
-  document.getElementById("days").innerHTML = days + " d ";
-  document.getElementById("hours").innerHTML = hours + " h ";
-  document.getElementById("minutes").innerHTML = minutes + " m ";
-  document.getElementById("seconds").innerHTML = seconds + " s ";
-
-  document.getElementById("demo").innerHTML = days + " d " + hours + " h "
-  + minutes + " m " + seconds + " s ";
+  document.getElementById("days").innerHTML = remaining + " remaining work days ";
 
 }, 1000);
 </script>
