--- a/workdays.html
+++ b/workdays.html
@@ -29,42 +29,43 @@ var now = new Date();
 
 const remaining_work_days = 
 [
-    new Date(2023,11,30), 
-    new Date(2023,11,29),
-    new Date(2023,11,28),
-    new Date(2023,11,27),
-    new Date(2023,11,21),
-    new Date(2023,11,20),
-    new Date(2023,11,17),
-    new Date(2023,11,16),
-    new Date(2023,11,15),
-    new Date(2023,11,14),
-    new Date(2023,11,13),
-    new Date(2023,11,10),
-    new Date(2023,11,9),
-    new Date(2023,11,8),
-    new Date(2023,11,7),
-    new Date(2023,11,6),
-    new Date(2023,11,3),
-    new Date(2023,11,2),
-    new Date(2023,11,1),
-    new Date(2023,10,31),
-    new Date(2023,10,30),
+    new Date(2023,10,30), 
+    new Date(2023,10,29),
+    new Date(2023,10,28),
     new Date(2023,10,27),
-    new Date(2023,10,26),
-    new Date(2023,10,25),
-    new Date(2023,10,24),
-    new Date(2023,10,23),
+    new Date(2023,10,21),
     new Date(2023,10,20),
-    new Date(2023,10,19),
-    new Date(2023,10,18),   
-    new Date(2023,10,17),   
-    new Date(2023,10,16),   
-    new Date(2023,10,13),   
-    new Date(2023,10,12),   
-    new Date(2023,10,11)  
+    new Date(2023,10,17),
+    new Date(2023,10,16),
+    new Date(2023,10,15),
+    new Date(2023,10,14),
+    new Date(2023,10,13),
+    new Date(2023,10,10),
+    new Date(2023,10,9),
+    new Date(2023,10,8),
+    new Date(2023,10,7),
+    new Date(2023,10,6),
+    new Date(2023,10,3),
+    new Date(2023,10,2),
+    new Date(2023,10,1),
+    new Date(2023,9,31),
+    new Date(2023,9,30),
+    new Date(2023,9,27),
+    new Date(2023,9,26),
+    new Date(2023,9,25),
+    new Date(2023,9,24),
+    new Date(2023,9,23),
+    new Date(2023,9,20),
+    new Date(2023,9,19),
+    new Date(2023,9,18),   
+    new Date(2023,9,17),   
+    new Date(2023,9,16),   
+    new Date(2023,9,13),   
+    new Date(2023,9,12),   
+    new Date(2023,9,11)  
 ]; 
 var remaining;
+var log_once = true;
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -72,15 +73,22 @@ var x = setInterval(function() {
   // count dates in future in array
   remaining = 0;
   remaining_work_days.forEach(item => 
-    {if (now < item) 
-        {remaining++;} 
+    {
+      if (now < item) 
+      {
+        remaining++;
+        if (log_once)
+        console.log(item + " is later than today")
+      } 
     })
+
+    log_once = false;
 
   // Display the result 
   document.getElementById("workdays").innerHTML = remaining + " remaining work days ";  
   document.getElementById("today").innerHTML = " today is " + now;
 
-}, 1000);
+}, 10000);
 </script>
 </body>
 
