added antarctica and prague

--- a/prague.html
+++ b/prague.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- Display the countdown timer in an element -->
-    <p>Leaving for Antarctica in </p>
+    <p>Leaving for Prague in </p>
     <p id="days"></p>   
     <p id="hours"></p>    
     <p id="minutes"></p>
@@ -27,7 +27,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Dec 7 2023 05:38 PM").getTime();
+var countDownDate = new Date("Apr 27 2024 09:00 PM").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
