--- a/wedding.html
+++ b/wedding.html
@@ -7,7 +7,12 @@
     <title>Countdown</title>
 	
 	<style> 
-	p 
+  body 
+  {
+    background-image: url('background-image.jpg');
+  }
+	
+  p 
 	{
 		text-align: center;
 		font-size: 60px;
@@ -19,7 +24,7 @@
 
 <body>
     <!-- Display the countdown timer in an element -->
-    <p>Leaving for Prague in </p>
+    <p>Devan and Mason's wedding </p>
     <p id="days"></p>   
     <p id="hours"></p>    
     <p id="minutes"></p>
@@ -27,7 +32,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Apr 27 2024 09:00 PM").getTime();
+var countDownDate = new Date("Apr 20 2024 05:00 PM").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -51,7 +56,10 @@ var x = setInterval(function() {
   document.getElementById("minutes").innerHTML = minutes + " m ";
   document.getElementById("seconds").innerHTML = seconds + " s ";
 
- }, 1000);
+  document.getElementById("demo").innerHTML = days + " d " + hours + " h "
+  + minutes + " m " + seconds + " s ";
+
+}, 1000);
 </script>
 </body>
 
