--- a/wedding.html
+++ b/wedding.html
@@ -10,10 +10,9 @@
   body 
   {
     background-image: url('background-image.jpg');
+    background-size: contain;
   }
-	
-  p 
-	p 
+ 	p 
 	{
 		text-align: center;
 		font-size: 60px;
