--- a/wedding.html
+++ b/wedding.html
@@ -10,7 +10,7 @@
   body 
   {
     background-image: url('background-image.jpg');
-    background-size: contain;
+    background-size: cover;
   }
  	p 
 	{
