changed title to hesse

--- a/wedding.html
+++ b/wedding.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Display the countdown timer in an element -->
-    <p>Devan and Mason's wedding </p>
+    <p>Hesse wedding </p>
     <p id="days"></p>   
     <p id="hours"></p>    
     <p id="minutes"></p>
