added laurel image

--- a/laurel.html
+++ b/laurel.html
@@ -13,6 +13,13 @@
 		font-size: 60px;
 		margin-top: 0px;
 	}
+  body
+  {
+    background-image: url('laurel_bw.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: auto 100%;
+  }
 	</style>
 
 </head>
