--- a/laurel.html
+++ b/laurel.html
@@ -49,7 +49,7 @@ var x = setInterval(function() {
   // Time calculations for days, hours, minutes and seconds
   var years = Math.floor(age / (1000 * 60 * 60 * 24 * 365));
   var days = Math.floor(age % (1000 * 60 * 60 * 24 * 365) / (1000 * 60 * 60 * 24));
-  var weeks = Math.floor(days % 7);
+  var weeks = Math.floor(days / 7);
   var hours = Math.floor((age % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   var minutes = Math.floor((age % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((age % (1000 * 60)) / 1000);
